shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmAuthorizationException.kt
package com.example.osmapi.core.common.errors

class OsmAuthorizationException : OsmApiException()